2008-06-09  Dustin J. Mitchell <dustin@zmanda.com>
	* man/xml-source/amanda.8.xml: add links to amservice

2008-06-07  Dustin J. Mitchell <dustin@zmanda.com>
	* config/amanda/ipv6.m4: remove redundant AC_SOCKADDR_STORAGE
	* configure.in: don't call AC_SOCKADDR_STORAGE

2008-06-07  Dustin J. Mitchell <dustin@zmanda.com>
	* installcheck/Amanda_Xfer.pl: make AMANDA_TMPDIR if it doesn't exist

2008-06-07  Dustin J. Mitchell <dustin@zmanda.com>
	* installcheck/Installcheck/Run.pm: fix Installcheck::Run vtape
	  handling so that checks can load/unload vtapes "manually"

2008-06-07  Dustin J. Mitchell <dustin@zmanda.com>
	* server-src/amdevcheck.pl: apply config_overwrites before printing
	  config errors

2008-06-07  Dustin J. Mitchell <dustin@zmanda.com>
	* application-src/amgtar_perl.pl application-src/amstar_perl.pl
	  application-src/generic-dumper.pl application-src/generic-script.pl
	  application-src/script-email.pl server-src/amgetconf.pl: add GPL
	  notice

2008-06-06  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amservice.c: Exit with 1 if the connection fail.
	* man/xml-source/amservice.8.xml: Document exit code.

2008-06-06  Dustin J. Mitchell <dustin@zmanda.com>
	* device-src/device.c: make device_set_error bulletproof to NULLs
	* device-src/tape-posix.c: fix compilation error when GMT_ONLINE is
	  not defined

2008-06-06  Jean-Louis Martineau <martineau@zmanda.com>
	* man/Makefile.am: Add amservice.8.
	* man/xml-source/amservice.8.xml: New man page for amservice.
	* server-src/amservice.c: New program to execute an amanda service
	                          on a client.
	* server-src/Makefile.am: Add amservice
	* installcheck/amservice.pl: New check for amservice program.
	* installcheck/Makefile.am: Add amservice

2008-06-06  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/dumper.c: Don't quote dle_str.
	* common-src/fileheader.c: DLE= in header is like heredoc.

2008-06-06  Dustin J. Mitchell <dustin@zmanda.com>